fixed gaps and radiuses

--- a/src/components/flow/FlowStamp/styles.module.scss
+++ b/src/components/flow/FlowStamp/styles.module.scss
@@ -4,19 +4,19 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  background: lighten($content_bg, 4%);
   border-radius: $radius;
 }
 
 .grid {
+  @include outer_shadow();
   display: flex;
   justify-content: stretch;
   flex-direction: column;
   flex: 1;
   border-radius: $radius;
-  overflow: hidden;
   position: relative;
   background: $content_bg;
+  overflow: hidden;
 
   &::after {
     content: '';
@@ -28,9 +28,11 @@
     background: linear-gradient(transparentize($content_bg, 1), $content_bg 90%);
     pointer-events: none;
     touch-action: none;
-  }
 
-  @include outer_shadow();
+    @include tablet {
+      display: none;
+    }
+  }
 }
 
 .items {
@@ -69,11 +71,11 @@
 }
 
 .search {
-  background: lighten($content_bg, 3%);
-  border-radius: $radius $radius 0 0;
-  padding: $gap;
-
   @include outer_shadow();
+
+  background: lighten($content_bg, 3%);
+  padding: $gap;
+  border-radius: $radius;
 
   :global(.input_title) {
     color: lighten($content_bg, 10%);
@@ -121,5 +123,11 @@
 .whatsnew {
   @media (max-width: $flow_hide_recents) {
     display: none;
+  }
+}
+
+.search_results {
+  @include tablet {
+    margin-top: $gap;
   }
 }
