--- a/src/containers/lab/LabGrid/styles.module.scss
+++ b/src/containers/lab/LabGrid/styles.module.scss
@@ -4,6 +4,10 @@ div.wrap {
   display: flex;
   width: 100%;
   margin-right: 0;
+
+  @include tablet {
+    padding: 0 $gap / 2;
+  }
 }
 
 .column {
